--- a/animator.css
+++ b/animator.css
@@ -20,6 +20,7 @@
       animation: slide-in-bounce 0.6s ease-out;
     }
 /* Text sa pred zobrazenim pretaca */
+/* Toto treba dat prvku, aby sa maz z coho pretacat: style="transform-style: preserve-3d; transform: rotateX(-90deg) rotateY(10deg);" */
     @keyframes rotateFlipIn {
       to {
         transform: rotateX(0deg) rotateY(0deg);
