--- a/klienti.css
+++ b/klienti.css
@@ -4,7 +4,6 @@
     }
 
     .klienti-body {
-      font-family: 'Source Sans Pro', Arial, Tahoma, sans-serif;
       color: lightblue;
       padding: 40px 20px; /* hore/dole: 40px, vlavo/vpravo: 20px */
       max-width: 1263px;
@@ -13,7 +12,7 @@
     }
 
     .klienti-body h2 {
-      font-family: 'Montserrat', Arial, Tahoma, sans-serif;
+      /* font-family: 'Montserrat', Arial, Tahoma, sans-serif; */
       font-size: clamp(32px, 3vw, 44px);
       text-align: left;
     }
@@ -99,7 +98,7 @@
 
     @media (max-width: 756px) {
       .klienti-grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         justify-items: center;
       }
 
