--- a/enginint4.css
+++ b/enginint4.css
@@ -1,5 +1,5 @@
-    .enginint3-body {
-      background-color: #F8FCFF;
+    .enginint4-body {
+      background-color: white;
       color: black;
       height: auto;
       min-height: 100%;
@@ -7,13 +7,13 @@
       padding: 4vw 4vw; /* vertikalne horizontalne*/
       box-sizing: border-box;
     }
-    .enginint3-header-line {
+    .enginint4-header-line {
       width: 100%;
       height: 1px;
       background-color: #00C;
     }
 
-    .enginint3-content {
+    .enginint4-content {
       display: flex;
       flex-direction: row;
       /* width: 100vw; */
@@ -24,7 +24,7 @@
     }
 
 /**************************************************************************/
-    .enginint3-right {
+    .enginint4-right {
       flex: 4;
       /* background: #eef; */
       display: flex;
@@ -33,36 +33,36 @@
       padding: 20px;
       box-sizing: border-box;
     }
-    .enginint3-empty-line-with-img {
+    .enginint4-empty-line-with-img {
       display: flex;
       justify-content: flex-end; /* obrázok vpravo */
       align-items: center;       /* vertikálne zarovnanie */
       height: 1.5em;              /* výška „riadku“ */
     }
-    .enginint3-empty-line-with-img img {
-      height: 100px;               /* malý obrázok */
+    .enginint4-empty-line-with-img img {
+      height: 60px;               /* malý obrázok */
       width: auto;                 /* zachovať pomer strán */
     }
-    .enginint3-right strong {
+    .enginint4-right strong {
       font-weight: bold;
     }
-    .enginint3-right-last {
+    .enginint4-right-last {
         display: flex;
         align-items: center;       /* vertikálne zarovnanie textu s obrázkom */
         gap: 20px;                 /* medzera medzi textom a obrázkom */
         flex-wrap: nowrap;
     }
-    .enginint3-last p {
+    .enginint4-last p {
         margin: 0; /* odstrániť defaultné odsadenie */
     }
 /* Základ pre zoznam: odstránime defaultné odsadenie a medzery */
-    .enginint3-custom-list {
+    .enginint4-custom-list {
       list-style: none;
       padding: 0;
       margin: 0;
     }
 
-    .enginint3-custom-list li {
+    .enginint4-custom-list li {
       /* Žiadne zbytočné vertikálne medzery medzi riadkami */
       margin: 0;
       padding: 0;
@@ -71,7 +71,7 @@
     }
 
     /* Vlastná odrážka: plná guľka, vertikálne centrovaná */
-    .enginint3-custom-list li::before {
+    .enginint4-custom-list li::before {
       content: "●";
       /* Veľkosť a umiestnenie */
       display: inline-block;
@@ -85,26 +85,26 @@
     }
 
     /**************************************************************************/
-    .enginint3-more-info-container {
+    .enginint4-more-info-container {
       text-align: right; /* zarovnanie obsahu doprava */
     }
 
     /**************************************************************************/
-    .enginint3-divider {
+    .enginint4-divider {
       width: 1px;
       background-color: #00C;
       /* margin: 0 10px; */
     }
 
     /**************************************************************************/
-    .enginint3-left {
+    .enginint4-left {
       flex: 5;
       overflow: hidden;
       padding: 1vw;
       box-sizing: border-box;
       /* background: #efe; */
     }
-    .enginint3-left-group  {
+    .enginint4-left-group  {
       position: relative;
       aspect-ratio: 1 / 1; 
       width: 100%;
@@ -112,25 +112,36 @@
       justify-self: center;
       align-self: center;
     }
-    .enginint3-img1 {
+    .enginint4-img1 {
         position: absolute;
         width: 100%;
         top: 0%;
         left: 0%;
     }
+    .enginint4-img2 {
+        position: absolute;
+        width: 50%;
+        top: 55%;
+        left: 25%; 
+    }   
     /**************************************************************************/
     @media (max-width: 762px) {
-        .enginint3-content {
+        .enginint4-content {
            flex-direction: column-reverse;
            height: auto;
         }
-        .enginint3-divider {
+        .enginint4-divider {
             width: 100%;
             height: 1px;
             margin: 0 0;
         }
-        .enginint3-img1 {
+        .enginint4-img1 {
           width: 80%;
           left:10%;
+        }
+        .enginint4-img2 {
+          /* width: 45%; */
+          left:10%;
+          /* top: 39%; */
         }
     }    
