--- a/animator.css
+++ b/animator.css
@@ -77,9 +77,9 @@
     /*** Odkaz v url, na ktory sa skocilo, 3x zablika ************************************/
     /*** napr. indexKontakt.html#id-kontakt3-Deak, tak zablika element <div id="id-kontakt3-Deak"> */
     @keyframes contact-highlight {
-      0%   { background-color: #fff9d6; }
+      0%   { background-color: #fde663; }
       50%  { background-color: #fff; }
-      100% { background-color: #fff9d6; }
+      100% { background-color: #fde663; }
     }
     .highlight-once {
       animation: contact-highlight 1s ease-in-out 0s 3;
