--- a/kontakt2.css
+++ b/kontakt2.css
@@ -72,13 +72,14 @@
     	padding: 10px;
     }
 
-    /* .kontakt2-cell {
+    .kontakt2-cell {
     	width: 100%;
-    	aspect-ratio: 1 / 1;
+    	/* aspect-ratio: 1 / 1;  odstrániť! */
     	background-color: #e6e6e6;
     	display: flex;
-    	align-items: center;
-    	justify-content: center;
+    	flex-direction: column;
+    	/* aby text bol pod obrázkom */
+    	align-items: stretch;
     	font-size: smaller;
     	border-radius: 6px;
     	box-sizing: border-box;
@@ -88,30 +89,11 @@
 
     .kontakt2-cell img {
     	width: 100%;
-    	height: 100%;
+    	height: 120px;
+    	/* rovnaká výška pre všetky obrázky */
     	object-fit: cover;
     	border-radius: 4px;
-    } */
-.kontakt2-cell {
-  width: 100%;
-  /* aspect-ratio: 1 / 1;  odstrániť! */
-  background-color: #e6e6e6;
-  display: flex;
-  flex-direction: column; /* aby text bol pod obrázkom */
-  align-items: stretch;
-  font-size: smaller;
-  border-radius: 6px;
-  box-sizing: border-box;
-  padding: 5px;
-  margin: 5px;
-}
-
-.kontakt2-cell img {
-  width: 100%;
-  height: 120px;   /* rovnaká výška pre všetky obrázky */
-  object-fit: cover;
-  border-radius: 4px;
-}
+    }
 
     .kontakt2-cell.active {
     	outline: 3px solid orange;
