--- a/ref4.css
+++ b/ref4.css
@@ -1,22 +1,44 @@
 .ref4-body {
-  margin: 0;
-  padding: 2rem;
-  background-color: #f8f8f8;
-  color: #333;
+	margin: 0;
+	padding: 2rem;
+	background-color: #f8f8f8;
+	color: #333;
 }
 
-.ref4-body p {
-  font-size: larger;
+/* .ref4-header (prazdna class) sa tymto definuje implicitne */
+.ref4-header p {
+	font-size: larger;
 }
-.ref4-body h2 {
-  font-size: xx-large;
+
+.ref4-header h2 {
+	font-size: xx-large;
 }
 
 .ref4-animate-line {
-  height: 1px;
-  background-color: #00C;
-  width: 100%; 
-  margin-bottom: 3vw;
+	height: 1px;
+	background-color: #00C;
+	width: 100%;
+	margin-bottom: 5vw;
 }
 
+.ref4-line-with-img {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 1.5em;
+}
 
+.ref4-line-with-img img {
+	height: 60px;
+	width: auto;
+}
+
+@media (max-width: 762px) {
+  .ref4-header p {
+    font-size: medium;   /* alebo 1rem, podľa toho čo chcete */
+  }
+
+  .ref4-header h2 {
+    font-size: large;    /* alebo 1.5rem, prípadne konkrétne px */
+  }
+}
