--- a/ref-ovl.css
+++ b/ref-ovl.css
@@ -48,7 +48,6 @@
     	flex-direction: column;
     	align-items: center;
     	justify-content: center;
-    	font-size: 0.6rem;
     	font-weight: 500;
     	text-align: center;
     	transition: bottom 0.25s ease;
@@ -60,6 +59,11 @@
     .ref-ovl-overlay p {
     	margin: 2px 0;
     }
+
+	.ref-ovl-overlay p,
+	.ref-ovl-overlay p strong {
+    	font-size: clamp(0.5rem, 0.9vw, 0.8rem);
+	}
 
     .ref-ovl-company-item {
     	width: 100%;
@@ -76,11 +80,11 @@
     	height: 100%;
     	background-color: #f5f5f5;
     	color: #000;
-    	font-weight: 700;
+    	font-weight: 500;
     	display: flex;
     	align-items: center;
     	justify-content: center;
-    	font-size: 0.6rem;
+    	font-size: clamp(0.5rem, 0.9vw, 0.8rem);
     	transition: bottom 0.3s ease;
     	z-index: 1;
     }
@@ -98,22 +102,18 @@
     }
 
     /************************************************************************************************************/
-    /* Responsive: zníž počet stĺpcov zo 4 na 2 */
     @media (max-width: 768px) {
-    	h1.ref-ovl-popis {
-    		font-size: 1.6rem;
-    	}
-
-    	p.ref-ovl-popis {
-    		font-size: 0.8rem;
-    	}
-
     	.ref-ovl-grid {
     		grid-template-columns: repeat(3, 1fr);
     		gap: clamp(4px, 1.5vw, 12px);
     	}
 
+		.ref-ovl-overlay p,
+		.ref-ovl-overlay p strong {
+			font-size: clamp(0.6rem, 1.9vw, 1.4rem);
+		}
+
     	.ref-ovl-company {
-    		font-size: 0.7rem;
-    	}
+    		font-size: clamp(0.6rem, 1.9vw, 1.4rem);
+		}
     }
