--- a/ref3.css
+++ b/ref3.css
@@ -1,22 +1,44 @@
 .ref3-body {
-  margin: 0;
-  padding: 2rem;
-  background-color: #E8F4FF;;
-  color: #333;
+	margin: 0;
+	padding: 2rem;
+	background-color: #E8F4FF;
+	;
+	color: #333;
 }
 
-.ref3-body p {
-  font-size: larger;
+.ref3-header p {
+	font-size: larger;
 }
-.ref3-body h2 {
-  font-size: xx-large;
+
+.ref3-header h2 {
+	font-size: xx-large;
 }
 
 .ref3-animate-line {
-  height: 1px;
-  background-color: #00C;
-  width: 100%; 
-  margin-bottom: 3vw;
+	height: 1px;
+	background-color: #00C;
+	width: 100%;
+	margin-bottom: 5vw;
 }
 
+.ref3-line-with-img {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 1.5em;
+}
 
+.ref3-line-with-img img {
+	height: 60px;
+	width: auto;
+}
+
+@media (max-width: 762px) {
+  .ref3-header p {
+    font-size: medium;   /* alebo 1rem, podľa toho čo chcete */
+  }
+
+  .ref3-header h2 {
+    font-size: large;    /* alebo 1.5rem, prípadne konkrétne px */
+  }
+}
