--- a/kontakt1.css
+++ b/kontakt1.css
@@ -23,7 +23,7 @@
     .kontakt1-top-left {
       width: 50%;
       padding: 1.5rem;
-      font-weight: 200;
+      font-weight: 300;
     }
     
     .kontakt1-top-left h1 {
@@ -47,7 +47,7 @@
       align-items: center;
     }
 
-    /* Formulár */
+    /* Formulár *******************************************************************************************************************/
     .kontakt1-form-wrapper {
       width: 50%;
       max-width: 600px;
