--- a/ref-ovl.css
+++ b/ref-ovl.css
@@ -3,12 +3,17 @@
     	/* grid-template-columns: repeat(4, 1fr); */
     	grid-template-columns: repeat(6, 1fr);
     	grid-auto-rows: auto;
-    	gap: clamp(6px, 2vw, 20px);
+    	gap: 0.5vw 2vw;
     	justify-content: center;
     	align-items: start;
     	max-width: 1200px;
     	margin: 0 auto;
     	margin-bottom: 2vw;
+    }
+
+    .ref-ovl-grid.columns-3 {
+    	grid-template-columns: repeat(3, 1fr);
+    	max-width: 600px;
     }
 
     .ref-ovl-item-wrap {
@@ -21,14 +26,16 @@
     	aspect-ratio: 167 / 91;
     	position: relative;
     	overflow: hidden;
-    	border: 2px solid #ccc;
+    	/* border: 2px solid #ccc; */
+    	border: 1px solid #00C;
     	background-color: transparent;
+    	container-type: inline-size; /* uplne nova vlastnost css */
     }
 
-    .ref-ovl-item.active {
+    /* .ref-ovl-item.active {
     	border: 6px solid orange;
     }
-
+ */
     .ref-ovl-image {
     	position: absolute;
     	bottom: 0;
@@ -42,7 +49,8 @@
     	left: 0;
     	width: 100%;
     	height: 100%;
-    	background-color: #000;
+    	background-color: black;
+		/* background-color: linear-gradient(to right, #000022, #1e90ff); */
     	color: #fff;
     	display: flex;
     	flex-direction: column;
@@ -60,10 +68,14 @@
     	margin: 2px 0;
     }
 
-	.ref-ovl-overlay p,
-	.ref-ovl-overlay p strong {
+    .ref-ovl-overlay p,
+    .ref-ovl-overlay p strong {
     	font-size: clamp(0.5rem, 0.9vw, 0.8rem);
-	}
+    }
+
+    .ref-ovl-realiz-sluzby {		
+    	display: block; /* pri uzkom parentovi (container-type: inline-size;) sa zmeni na display: none; */
+    }
 
     .ref-ovl-company-item {
     	width: 100%;
@@ -78,7 +90,8 @@
     	left: 0;
     	width: 100%;
     	height: 100%;
-    	background-color: #f5f5f5;
+    	/* background-color: #f5f5f5; */
+    	background-color: transparent;
     	color: #000;
     	font-weight: 500;
     	display: flex;
@@ -87,7 +100,7 @@
     	font-size: clamp(0.5rem, 0.9vw, 0.8rem);
     	transition: bottom 0.3s ease;
     	z-index: 1;
-    }
+	}
 
     .ref-ovl-item-wrap:hover .ref-ovl-image {
     	transform: translateY(-100%);
@@ -102,18 +115,25 @@
     }
 
     /************************************************************************************************************/
-    @media (max-width: 768px) {
+    @media (max-width: 762px) {
     	.ref-ovl-grid {
     		grid-template-columns: repeat(3, 1fr);
     		gap: clamp(4px, 1.5vw, 12px);
     	}
 
-		.ref-ovl-overlay p,
-		.ref-ovl-overlay p strong {
-			font-size: clamp(0.6rem, 1.9vw, 1.4rem);
-		}
+    	.ref-ovl-overlay p,
+    	.ref-ovl-overlay p strong {
+    		font-size: clamp(0.6rem, 1.9vw, 1.4rem);
+    	}
 
     	.ref-ovl-company {
     		font-size: clamp(0.6rem, 1.9vw, 1.4rem);
-		}
+    	}
+    }
+
+    @container (max-width: 120px) {
+		/* musi existovat rodic s "container-type: inline-size;" (inline-size je preto, aby testovalo sirku (nie vysku)) */
+    	.ref-ovl-realiz-sluzby {
+    		display: none;
+    	}
     }
