--- a/ref1.css
+++ b/ref1.css
@@ -1,29 +1,30 @@
 .ref1-body {
-  margin: 0;
-  padding: 2rem;
-  background-color: #E8F4FF;;
-  color: #333;
+	margin: 0;
+	padding: 2rem;
+	background-color: #E8F4FF;
 }
 
 .ref1-header p {
-  font-size: larger;
+	font-size: larger;
+	margin: 0;
 }
+
 .ref1-header h2 {
-  font-size: xx-large;
+	font-size: xx-large;
+	margin: 0;
 }
 
 .ref1-animate-line {
-  height: 1px;
-  background-color: #00C;
-  width: 100%; 
-  margin-bottom: 5vw;
+	height: 1px;
+	background-color: #00C;
+	width: 100%;
+	margin: 1vw 0;
 }
 
 .ref1-line-with-img {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
-	height: 1.5em;
+	align-items: flex-end;
 }
 
 .ref1-line-with-img img {
@@ -31,13 +32,84 @@
 	width: auto;
 }
 
-@media (max-width: 762px) {
-  .ref1-header p {
-    font-size: medium;   /* alebo 1rem, podľa toho čo chcete */
-  }
-
-  .ref1-header h2 {
-    font-size: large;    /* alebo 1.5rem, prípadne konkrétne px */
-  }
+/**************************************************************************/
+.ref1-content-flex {
+	display: flex;
+	flex-direction: row;
+	width: auto;
+	box-sizing: border-box;
+	padding: 1vw;
+	gap: 1vw;
+	color: #333;
 }
 
+/**********************************************/
+.ref1-left {
+	flex: 4;
+	overflow: hidden;
+	padding: 1vw;
+	box-sizing: border-box;
+	min-width: 0;
+	/* border: 1px dashed red;	 */
+}
+
+.ref1-left-group {
+	position: relative;
+	aspect-ratio: 1 / 1.25;
+	width: 100%;
+	max-width: 600px;
+	justify-self: center;
+	align-self: center;
+	/* border: 1px dashed red; */
+}
+
+.ref1-img1 {
+	position: absolute;
+	width: 100%;
+	top: 0%;
+	left: 0%;
+}
+
+.ref1-img2 {
+	position: absolute;
+	width: 100%;
+	top: 46%;
+	left: 0%;
+}
+
+/**********************************************/
+.ref1-divider {
+	flex: 0.01;
+	width: 1px;
+	min-width: 0;
+	background-color: #00C;
+}
+
+.ref1-right {
+	flex: 4;
+	padding: 1vw;
+	box-sizing: border-box;
+	min-width: 0;
+	/* border: 1px dashed blue; */
+}
+
+/**************************************************************************/
+@media (max-width: 762px) {
+	.ref1-header p {
+		font-size: medium;
+	}
+
+	.ref1-header h2 {
+		font-size: large;
+	}
+
+	.ref1-content-flex {
+		flex-direction: column;
+	}
+
+	.ref1-divider {
+		width: 100%;
+		height: 1px;
+		margin: 0 0;
+	}
+}
