--- a/ref3.css
+++ b/ref3.css
@@ -2,30 +2,29 @@
 	margin: 0;
 	padding: 2rem;
 	background-color: #E8F4FF;
-	;
-	color: #333;
 }
 
 .ref3-header p {
 	font-size: larger;
+	margin: 0;
 }
 
 .ref3-header h2 {
 	font-size: xx-large;
+	margin: 0;
 }
 
 .ref3-animate-line {
 	height: 1px;
 	background-color: #00C;
 	width: 100%;
-	margin-bottom: 5vw;
+	margin: 1vw 0;
 }
 
 .ref3-line-with-img {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
-	height: 1.5em;
+	align-items: flex-end;
 }
 
 .ref3-line-with-img img {
@@ -33,12 +32,98 @@
 	width: auto;
 }
 
-@media (max-width: 762px) {
-  .ref3-header p {
-    font-size: medium;   /* alebo 1rem, podľa toho čo chcete */
-  }
+/**************************************************************************/
+.ref3-content-flex {
+	display: flex;
+	flex-direction: row;
+	/* width: 100vw; */
+	width: auto;
+	box-sizing: border-box;
+	padding: 1vw;
+	gap: 1vw;
+	color: #333;
+}
 
-  .ref3-header h2 {
-    font-size: large;    /* alebo 1.5rem, prípadne konkrétne px */
-  }
+/**********************************************/
+.ref3-left {
+	flex: 4;
+	overflow: hidden;
+	padding: 1vw;
+	box-sizing: border-box;
+}
+
+.ref3-left-group {
+	position: relative;
+	aspect-ratio: 1 / 1;
+	width: 100%;
+	max-width: 600px;
+	justify-self: center;
+	align-self: center;
+}
+
+.ref3-img1 {
+	position: absolute;
+	width: 100%;
+	top: 0%;
+	left: 0%;
+}
+
+.ref3-img2 {
+	position: absolute;
+	width: 40%;
+	top: 55%;
+	left: 0%;
+}
+.ref3-img3 {
+	position: absolute;
+	width: 50%;
+	top: 60%;
+	left: 50%;
+}
+
+/* .ref3-img1 {
+	position: absolute;
+	width: 60%;
+	top: 0%;
+	left: 0%;
+}
+
+.ref3-img2 {
+	position: absolute;
+	width: 60%;
+	top: 55%;
+	left: 40%;
+} */
+
+/**********************************************/
+.ref3-divider {
+	width: 1px;
+	background-color: #00C;
+}
+
+.ref3-right {
+	flex: 4;
+	padding: 1vw;
+	box-sizing: border-box;
+}
+
+/**************************************************************************/
+@media (max-width: 762px) {
+	.ref3-header p {
+		font-size: medium;
+	}
+
+	.ref3-header h2 {
+		font-size: large;
+	}
+
+	.ref3-content-flex {
+		flex-direction: column;
+	}
+
+	.ref3-divider {
+		width: 100%;
+		height: 1px;
+		margin: 0 0;
+	}
 }
