--- a/ref4.css
+++ b/ref4.css
@@ -5,27 +5,27 @@
 	color: #333;
 }
 
-/* .ref4-header (prazdna class) sa tymto definuje implicitne */
 .ref4-header p {
 	font-size: larger;
+	margin: 0;
 }
 
 .ref4-header h2 {
 	font-size: xx-large;
+	margin: 0;
 }
 
 .ref4-animate-line {
 	height: 1px;
 	background-color: #00C;
 	width: 100%;
-	margin-bottom: 5vw;
+	margin: 1vw 0;
 }
 
 .ref4-line-with-img {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
-	height: 1.5em;
+	align-items: flex-end;
 }
 
 .ref4-line-with-img img {
@@ -33,12 +33,77 @@
 	width: auto;
 }
 
-@media (max-width: 762px) {
-  .ref4-header p {
-    font-size: medium;   /* alebo 1rem, podľa toho čo chcete */
-  }
+/**************************************************************************/
+.ref4-content-flex {
+	display: flex;
+	flex-direction: row;
+	width: auto;
+	box-sizing: border-box;
+	padding: 1vw;
+	gap: 1vw;
+	color: #333;
+}
 
-  .ref4-header h2 {
-    font-size: large;    /* alebo 1.5rem, prípadne konkrétne px */
-  }
+/**********************************************/
+.ref4-left {
+	flex: 4;
+	overflow: hidden;
+	padding: 1vw;
+	box-sizing: border-box;
+}
+
+.ref4-left-group {
+	position: relative;
+	aspect-ratio: 1 / 1;
+	width: 100%;
+	max-width: 600px;
+	justify-self: center;
+	align-self: center;
+}
+
+.ref4-img1 {
+	position: absolute;
+	width: 100%;
+	top: 0%;
+	left: 0%;
+}
+
+.ref4-img2 {
+	position: absolute;
+	width: 60%;
+	top: 55%;
+	left: 40%;
+}
+
+/**********************************************/
+.ref4-divider {
+	width: 1px;
+	background-color: #00C;
+}
+
+.ref4-right {
+	flex: 4;
+	padding: 1vw;
+	box-sizing: border-box;
+}
+
+/**************************************************************************/
+@media (max-width: 762px) {
+	.ref4-header p {
+		font-size: medium;
+	}
+
+	.ref4-header h2 {
+		font-size: large;
+	}
+
+	.ref4-content-flex {
+		flex-direction: column-reverse;
+	}
+
+	.ref4-divider {
+		width: 100%;
+		height: 1px;
+		margin: 0 0;
+	}
 }
