--- a/formular.css
+++ b/formular.css
@@ -5,17 +5,6 @@
 	/* prebitie systemoveho fontu (u input, textarea, select treba font nechat tak, rozhadzuje to formulare) */
 
 	.formular-wrapper {
-		/* width: 90%;
-		max-width: 600px;
-		margin: 5vw auto;
-		padding: 1.5rem;
-
-		background-color: #4466BBC0;
-		color: white;
-		border-radius: 8px;
-		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-		text-align: left; */
-
 		max-width: 600px;
 		max-height: 100%;
 		min-width: 400px;
@@ -26,7 +15,6 @@
 		border-radius: 8px;
 		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 		text-align: left;
-		/* border: 1px dashed red; */
 	}
 
 	.formular-animate-line {
@@ -44,7 +32,6 @@
 		row-gap: 1rem;
 		font-size: 1rem;
 		padding: 1vw;
-		/* border: 1px dashed red; */
 	}
 
 	.formular-group {
@@ -61,23 +48,42 @@
 		margin-bottom: 0.5vw;
 	}
 
-	.formular input,
-	.formular textarea {
-		background-color: white;
+	.formular-wrapper input,
+	.formular-wrapper textarea {
+		background-color: white !important;
+		border: 1px solid #ccc;
 		border-radius: 6px;
 		box-sizing: border-box;
 		font-size: 1.1rem;
 		color: black;
 		width: 100%;
-		height: 2rem;
+		height: 1.5rem;
+		padding: 0.5rem;
 	}
 
-	.formular textarea {
+	.input-wrapper {
+		background-color: transparent;
+		/* box-sizing: border-box; */
+		/* border: 1px dashed blue; */
+	}
+
+	/* .input-wrapper input {
+		background-color: white !important;
+		color: black !important;
+		border: none;
+		width: 100%;
+		height: 1.5rem;
+		box-sizing: border-box;
+		box-shadow: none !important;
+		outline: none !important;
+	}
+ */
+	.formular-wrapper textarea {
 		height: 6rem;
 		resize: vertical;
 	}
 
-	.formular a {
+	.formular-wrapper a {
 		color: white;
 		text-decoration: underline;
 	}
@@ -90,11 +96,20 @@
 	.formular-checkbox {
 		display: flex;
 		box-sizing: border-box;
-		align-items: center;
-		gap: 1.5vw;
+		align-items: flex-start;
+		gap: 0.5vw;
 		font-size: 1rem;
 		width: 100%;
 		padding: 1vw;
+	}
+
+	.formular-checkbox input[type="checkbox"] {
+		flex: 1;
+	}
+
+	.formular-checkbox label {
+		flex: 10;
+		line-height: 1.4;
 	}
 
 	.formular-submit-btn {
