--- a/ref1.css
+++ b/ref1.css
@@ -1,7 +1,8 @@
 .ref1-body {
 	margin: 0;
 	padding: 2rem;
-	background-color: #E8F4FF;
+	padding-top: 1rem;
+	background-color: #f8f8f8;
 }
 
 .ref1-header p {
