--- a/UvodHero.css
+++ b/UvodHero.css
@@ -22,22 +22,22 @@
       z-index: 1; /* musí byť nad videom */}
     
     .uvod-hero h1 {
-      font-size: 4rem;
+      font-size: 4vw;
       line-height: 1.6;
-      padding: 20px;
-      border-radius: 10px;
+      padding: 2vw;
+      border-radius: 1vw;
       background-color: transparent;
-      margin-bottom: 20px;
-      margin-left: 40px;
+      margin-bottom: 2vw;
+      margin-left: 4vw;
     }
 
     .uvod-hero p {
-      font-size: 2rem;
+      font-size: 3vw;
       line-height: 1.6;
       padding: 1rem;
       background-color: transparent;
-      margin-bottom: 20px;
-      margin-left: 40px;
+      margin-bottom: 2vw;
+      margin-left: 4vw;
     }
 
    .uvod-hero-video {
