--- a/menu.css
+++ b/menu.css
@@ -49,13 +49,13 @@
     .uvod-menu {
       display: flex;
       align-items: center;
-      font-size: 16px;
+      font-size: clamp(1rem, 1.2vw, 2rem);
       gap: 0;
     }
 
     .uvod-menu a {
       color: white;
-      margin: 0 10px;
+      margin: 0 clamp(0.625rem, 0.8vw, 1.25rem);
       text-decoration: none;
       cursor: pointer;
     }
