--- a/onas1.css
+++ b/onas1.css
@@ -1,88 +1,85 @@
     .onas1-body {
-      background-color: white;
-      color: black;
-      font-weight: 400;
-      font-size: clamp(18px, 1.8vw, 30px);
-      display: flex;
-      flex-direction: column;
-      /* min-height: 100vh; */
-      padding: 4vw 4vw; /* vertikalne horizontalne*/
-      box-sizing: border-box;
-      /* border: 1px dashed red; */
-    }
-    .onas1-header-line {
-      width: 100%;
-      height: 1px;
-      background-color: #00C;
-    }
-    .onas1-content {
-      flex: 1; /* vztahuje sa k rodicovi (onas1-body{display: flex; flex-direction: column;}) */
-      display: flex;
-      padding-top: 20px;
-      /* border: 1px dashed red;     */
-    }
-    .onas1-left {
-      flex: 6; /* vztahuje sa k rodicovi (.onas1-content {display: flex;} ) */
-      display: flex;
-      align-items: center; /* vedlajsia os (zvisla) , lebo flex-direction: row (default) */
-      justify-content: center; /* hlavna os (vodorovna, lebo flex-direction: row (default)) */
-      /* border: 1px dashed green; */
-      box-sizing: border-box;
-    }
-    .onas1-left-inner {
-      /* max-width: 300px; */
-      width: 100%;
-      margin: 0 auto;
-      text-align: center;
-      /* border: 1px dashed blue; */
-    }
-    .onas1-left-inner img {
-      max-width: 100%;
-      height: auto;
-      /* border: 1px dashed red; */
-    }
-    .onas1-divider {
-      width: 1px;
-      background-color: #00C;
-      margin: 0 10px;
-    }
-    .onas1-right {
-        flex: 7;
-        display: flex;
-        flex-direction: column;
-        justify-content: center; /* vertikálne centrovanie */
-        padding: 20px;
-        box-sizing: border-box;
-    }
-    .onas1-right strong {
-      font-weight: bold;
+    	padding: 1vw;
+    	background-color: #E8F4FF;
+    	color: black;
+    	/* margin-top: 2vw; */
+    	box-sizing: border-box;
     }
 
-    @media (max-width: 762px) {
-        .onas1-body {
-            min-height: auto;
-        }
-        .onas1-content {
-          flex-direction: column;
-          align-items: center;
-          padding-top: 0;
-      }
-      .onas1-left {
-          padding: 0 0;
-          width: 100%;
-          justify-content: center;
-      }
-      .onas1-divider {
-          width: 95%;
-          height: 1px;
-          /* background-color: black; */
-          margin: 0 0;
-      }
-      .onas1-right {
-          width: 100%;
-          padding: 15px 20px;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-      }
+    .onas1-header-line {
+    	width: 100%;
+    	height: 1px;
+    	background-color: #00C;
+		margin-bottom: 1vw;
+    }
+
+    .onas1-flex-container {
+    	display: flex;
+    	flex-direction: row;
+    	width: 100%;
+    	gap: 1vw;
+    	align-items: center;
+    	flex-wrap: nowrap;
+    	box-sizing: border-box;
+		/* border: 1px dashed red; */
+    }
+
+    .onas1-left,
+    .onas1-right {
+    	padding-inline: 1vw;
+    	flex: 0 0 49%;
+    	box-sizing: border-box;
+    }
+
+    .onas1-img-wrapper {
+    	width: 100%;
+    	height: 100%;
+    	overflow: hidden;
+    }
+
+    .onas1-img img {
+    	width: 100%;
+    	object-fit: contain;
+    	display: block;
+    }
+
+    /*******************************************************************************/
+    .onas1-right {
+    	display: flex;
+    	flex-direction: column-reverse;
+    	justify-content: center;
+    }
+
+    .onas1-right p {
+    	font-size: calc(0.6rem + 0.7vw);
+    	color: black;
+    	line-height: 1.2;
+    }
+
+    .onas1-right strong {
+    	font-weight: bold;
+    }
+
+    /*******************************************************************************/
+    @media (max-width: 768px) {
+    	.onas1-body {
+    		min-height: auto;
+    	}
+
+    	.onas1-flex-container {
+    		flex-direction: column-reverse;
+    		align-items: center;
+    		padding-top: 0;
+    	}
+
+    	.onas1-left {
+    		padding: 0 0;
+    		width: 100%;
+    		justify-content: center;
+    	}
+
+    	.onas1-left,
+    	.onas1-right {
+    		flex: 0 0 100%;
+    	}
     }
